<resources>
    <string name="app_name">Tesla3 Speedometer</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="login_intro">Login using your Tesla account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="email_or_password_error">Wrong email or password</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="password_error">Please enter a valid password</string>


    <string name="dashboard">Dashboard</string>
    <string name="vehicles">Vehicles</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="select_vehicle">Select vehicle</string>
    <string name="no_vehicles_available">No vehicles available.</string>
    <string name="vehicle_selected">Vehicle Selected</string>
    <string name="view_vehicle">View vehicle</string>

    <string name="battery_status">Battery level</string>

    <string name="vehicle_sleeping">Vehicle sleeping</string>

    <string name="no_internet">No Internet</string>
    <string name="you_seem_to_be_offline">You seem to be offline</string>
    <string name="no_internet_hint">Check your wifi connection or cellular data</string>

    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="skip">Skip</string>
    <string name="exit">Exit</string>

    <string name="session_expired">Session expired</string>
    <string name="login_again">You need to login again</string>

    <string name="logout_message">Are you sure you want to logout?</string>

    <string name="confirm_app_close">Press back again to close app</string>

    <string name="location_required_title">Location Services</string>
    <string name="location_required_message">To continue using this app, Location Services must be turned on</string>
    <string name="go_to_location_settings">Go to Location settings</string>

    <string name="location_permission_required_title">Location Permissions</string>
    <string name="location_permission_required_message">To continue using this app, location permissions must be allowed</string>
    <string name="location_permission_allow">Ask again</string>
    <string name="go_to_app_settings">Go to Permissions</string>

    <string name="channel_name" translatable="false">Tesla Dashboard Channel</string>
    <string name="channel_description" translatable="false">This is the main channel for Tesla Dashboard app</string>

    <string name="server_connection_error">Server connection error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
