<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrayColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/login_intro_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textColor="@color/blackColor"
                android:textSize="20sp"
                android:text="@string/login_intro"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_intro_textview"
                android:layout_marginTop="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:hintEnabled="false"
                android:theme="@style/TextInputLayoutLightBackgroundTheme">
                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_caramel_dark_24dp"
                    android:drawablePadding="16dp"
                    android:background="@drawable/background_edittext_round_border_caramel_dark"
                    android:padding="16dp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:textAlignment="viewStart"
                    android:textColor="@color/blackColor"
                    android:textColorHint="@color/blackColor"
                    android:textSize="16sp"
                    android:hint="@string/email_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_input_layout"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:hintEnabled="false"
                android:theme="@style/TextInputLayoutLightBackgroundTheme">
                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_caramel_dark_24dp"
                    android:drawablePadding="16dp"
                    android:background="@drawable/background_edittext_round_border_caramel_dark"
                    android:padding="16dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textAlignment="viewStart"
                    android:textColor="@color/blackColor"
                    android:textColorHint="@color/blackColor"
                    android:textSize="16sp"
                    android:hint="@string/password_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_input_layout"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edittext_round_border_caramel_dark"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:text="@string/login"/>
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>