<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="64dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture_imageview"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_person_white_48dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/whiteColor"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/profile_picture_imageview">
            <TextView
                android:id="@+id/username_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/whiteColor"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="Jon Doe"/>
        </RelativeLayout>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whiteColor"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <RelativeLayout
        android:id="@+id/change_vehicle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/change_vehicle__imageview"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_directions_car_white_48dp"/>
        <TextView
            android:id="@+id/change_vehicle_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/change_vehicle__imageview"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            android:text="@string/vehicles"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whiteColor"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <RelativeLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="16dp">
        <ImageView
            android:id="@+id/settings_imageview"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_settings_white_48dp"/>
        <TextView
            android:id="@+id/settings_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/settings_imageview"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            android:text="@string/settings"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="@color/whiteColor"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <RelativeLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/logout_imageview"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_exit_to_app_white_48dp"
            android:rotationY="180"/>
        <TextView
            android:id="@+id/logout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/logout_imageview"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            android:text="@string/logout"/>
    </RelativeLayout>
</LinearLayout>